--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
           <li><a href="#">Photo's</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Contact</a></li>
+           <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Instagram"> 
+            <i class="fab fa-instagram"></i>
+          </a></li>
+          <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Facebook">
+            <i class="fab fa-facebook"></i>
+          </a></li>
+          <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Twitter">
+            <i class="fab fa-twitter"></i>
+          </a></li>
         </ul>
         <ul class="sidenav grey lighten-2" id="mobile-menu">
           <li><a href="#">Photo's</a></li>
@@ -209,6 +218,11 @@
       $('.sidenav').sidenav();
       $('.materialboxed').materialbox();
        $('.parallax').parallax();
+        $('.datepicker').datepicker({
+        disableWeekends: true,
+        yearRange: 1
+      });
+      $('.tooltipped').tooltip();
     });
   </script>
 </body>
