--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           <i class="material-icons">menu</i>
         </a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Photo's</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#photos">Photo's</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
            <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-position="bottom" data-tooltip="Instagram"> 
             <i class="fab fa-instagram"></i>
           </a></li>
@@ -62,7 +62,7 @@
   </header>
 
   <!-- photo / grid -->
-  <section class="container section" id="photos">
+  <section class="container section scrollspy" id="photos">
     <div class="row">
       <div class="col s12 l4">
           <img src="images2/main.png" alt="" class="responsive-img materialboxed">
@@ -98,7 +98,7 @@
     </div>
   </div>
   <!-- services / tabs -->
-<section class="section container" id="services">
+<section class="section container scrollspy" id="services">
     <div class="row">
       <div class="col s12 l4">
         <h2 class="indigo-text text-darken-4">What I do..</h2>
@@ -223,6 +223,7 @@
         yearRange: 1
       });
       $('.tooltipped').tooltip();
+      $('.scrollspy').scrollSpy();
     });
   </script>
 </body>
